--- a/package.json
+++ b/package.json
@@ -3,7 +3,22 @@
   "version": "0.0.3",
   "repo": "visionmedia/ms.c",
   "description": "String to microsecond & millisecond utilities",
-  "keywords": ["ms", "us", "usec", "millisecond", "microsecond", "conversion", "convert"],
+  "keywords": [
+    "ms",
+    "us",
+    "usec",
+    "millisecond",
+    "microsecond",
+    "conversion",
+    "convert"
+  ],
   "license": "MIT",
-  "src": ["ms.c", "ms.h"]
+  "src": [
+    "ms.c",
+    "ms.h"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/visionmedia/ms.c.git"
+  }
 }
