--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ms",
   "version": "0.0.3",
-  "repo": "visionmedia/ms.c",
+  "repo": "clibs/ms",
   "description": "String to microsecond & millisecond utilities",
   "keywords": ["ms", "us", "usec", "millisecond", "microsecond", "conversion", "convert"],
   "license": "MIT",
