--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "description": "String to microsecond & millisecond utilities",
   "keywords": ["ms", "us", "usec", "millisecond", "microsecond", "conversion", "convert"],
   "license": "MIT",
-  "src": ["ms.c", "ms.h"]
+  "src": ["ms.c", "ms.h"],
+  "dependencies": {
+    "littlstar/asprintf.c": "0.0.2"
+  }
 }
