--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
   - sudo apt-get install libcurl4-gnutls-dev -qq
   - git clone https://github.com/clibs/clib.git /tmp/clib
   - sudo make -C /tmp/clib install
-install: clib install
-script: make check
-
+install: clib install --dev
+script:
+  - make test
+  - valgrind --leak-check=full --error-exitcode=5 ./test > /dev/null
