--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libcurl4-gnutls-dev -qq
+  - sudo apt-get install libcurl4-gnutls-dev valgrind -qq
   - git clone https://github.com/clibs/clib.git /tmp/clib
   - sudo make -C /tmp/clib install
 install: clib install --dev
